@@ -4,13 +4,13 @@ import java.io.Serializable;
 import java.util.HashMap;
 
 public class Tables implements Serializable, Cloneable {
-	HashMap<Class<? extends Table>, Table> tables = new HashMap<Class<? extends Table>, Table>();
+	HashMap<Class<? extends Table>, Table> tables = new HashMap<>();
 
 	public <K extends Table> K get(Class<K> table) {
 		try {
 			Table t = tables.get(table);
 			if (t == null) {
-				t = table.newInstance();
+				t = table.getDeclaredConstructor().newInstance();
 				t.modify();
 				tables.put(table, t);
 			}
@@ -25,7 +25,7 @@ public class Tables implements Serializable, Cloneable {
 		try {
 			Tables clone;
 			clone = (Tables) super.clone();
-			clone.tables = new HashMap<Class<? extends Table>, Table>(tables);
+			clone.tables = new HashMap<>(tables);
 			for (Class<? extends Table> table : clone.tables.keySet()) {
 				clone.tables.put(table, tables.get(table).clone());
 			}
